--- a/package.json
+++ b/package.json
@@ -1,1 +1,16 @@
-{"dependencies":{"dotenv":"^17.2.1","ejs":"^3.1.10","express":"^5.1.0","nodemailer":"^7.0.5"}}
+{
+  "name": "my-portfolio",
+  "version": "1.0.0",
+  "description": "Portfolio website",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.1",
+    "ejs": "^3.1.10",
+    "express": "^5.1.0",
+    "nodemailer": "^7.0.5"
+  },
+  "license": "MIT"
+}
